--- a/Act 3.1/style.css
+++ b/Act 3.1/style.css
@@ -11,7 +11,7 @@ header{
     height: 80px;
 }
 .menu li a:hover{
-    background-color: orange;
+    background-color: rgb(222, 152, 22);
 }
 .menu li{
     display: inline-block;
